fix(board-control): fix positions on IE

--- a/app/game/play/widgets/board-controls/board-controls.scss
+++ b/app/game/play/widgets/board-controls/board-controls.scss
@@ -18,15 +18,18 @@ along with Arena of Titans. If not, see <http://www.gnu.org/licenses/>.
 */
 
 aot-board-controls {
+    bottom: 44%;
+    position: absolute;
+    right: 8.5%;
+
     .arrow {
         cursor: pointer;
         position: absolute;
     }
 
     .arrow-container {
-        position: absolute;
-        right: 0;
-        top: 28px;
+        position: relative;
+        right: -4px;
     }
 
     .arrow-up {
@@ -54,16 +57,18 @@ aot-board-controls {
     }
 
     .controls-container {
-        bottom: 44%;
-        position: absolute;
-        right: 8.5%;
+        position: relative;
     }
 
     .reset-button {
-        bottom: -51px;
+        bottom: -76px;
         cursor: pointer;
         position: absolute;
-        right: 2px;
+        right: -2px;
+    }
+
+    .reset-button-container {
+        position: relative;
     }
 
     .zoom-container {
@@ -79,6 +84,7 @@ aot-board-controls {
          */
         input {
             height: 21px;
+            padding: 0;
             width: 110px;
         }
     }
